@@ -13,7 +13,7 @@ lib_LTLIBRARIES += libmboard_p.la libmboard_pd.la
 endif
 
 libmboard_s_la_SOURCES  =
-libmboard_s_la_LDFLAGS  = -all-static
+libmboard_s_la_LDFLAGS  = -all-static 
 libmboard_s_la_LIBADD   = src/utils/lib_utils.la src/serial/lib_mb_s.la
 
 libmboard_sd_la_SOURCES =
@@ -22,12 +22,12 @@ libmboard_sd_la_LIBADD  = src/utils/lib_utils_d.la src/serial/lib_mb_sd.la
 
 if COMPILE_PARALLEL
 libmboard_p_la_SOURCES  =
-libmboard_p_la_LDFLAGS  = -all-static
-libmboard_p_la_LIBADD   = src/utils/lib_utils.la src/parallel/lib_mb_p.la
+libmboard_p_la_LDFLAGS  = -all-static @THREADS_LDFLAGS@ @MPILDFLAGSS@
+libmboard_p_la_LIBADD   = src/utils/lib_utils.la src/parallel/lib_mb_p.la @THREADS_LIBS@ @MPILIBS@
 
 libmboard_pd_la_SOURCES =
-libmboard_pd_la_LDFLAGS = -all-static
-libmboard_pd_la_LIBADD  = src/utils/lib_utils_d.la src/parallel/lib_mb_pd.la
+libmboard_pd_la_LDFLAGS = -all-static @THREADS_LDFLAGS@ @MPILDFLAGSS@
+libmboard_pd_la_LIBADD  = src/utils/lib_utils_d.la src/parallel/lib_mb_pd.la @THREADS_LIBS@ @MPILIBS@
 endif
 
 EXTRA_DIST = \
