@@ -8,7 +8,7 @@ lib_t_commqueue_la_SOURCES = setup_suite_commqueue.c \
 							 test_cq1.c \
 							 header_commqueue.h
 							 
-lib_t_commqueue_la_LDFLAGS = @COMMON_LDFLAGS@ @MPILIBS@ @CUNITLIBS@
+lib_t_commqueue_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLDFLAGS@
 lib_t_commqueue_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @MPICFLAGS@ @PARALLEL_EXTRA_CFLAGS@ @PRODUCTION_CFLAGS@
 endif
 
