@@ -8,7 +8,7 @@ lib_t_commroutines_la_SOURCES = setup_suite_commroutines.c \
 							    test_cr1.c \
 							    header_commroutines.h
 							 
-lib_t_commroutines_la_LDFLAGS = @COMMON_LDFLAGS@ @MPILIBS@ @CUNITLIBS@
+lib_t_commroutines_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLDFLAGS@
 lib_t_commroutines_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @MPICFLAGS@ @PARALLEL_EXTRA_CFLAGS@ @PRODUCTION_CFLAGS@
 endif
 
