@@ -9,7 +9,7 @@ lib_t_objmap_la_SOURCES = setup_suite_om.c \
 						  testsuite_om_utils.c \
 					      header_objmap.h
 							 
-lib_t_objmap_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLIBS@
+lib_t_objmap_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLDFLAGS@
 lib_t_objmap_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@
 
 else
