@@ -12,7 +12,7 @@ lib_t_pooled_list_la_SOURCES = setup_suite_pl.c \
 						 	   testsuite_pl_utils.c \
 					           header_pooled_list.h
 							 
-lib_t_pooled_list_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLIBS@
+lib_t_pooled_list_la_LDFLAGS = @COMMON_LDFLAGS@ @CUNITLDFLAGS@
 lib_t_pooled_list_la_CFLAGS  = -I$(INCLUDEDIR) @CUNITCFLAGS@ @PRODUCTION_CFLAGS@
 
 else
